# pairs_core_examples

./: README.md
cpp/: README.md
cpp/controller_plugin/: CMakeLists.txt  package.xml  plugins.xml
cpp/controller_plugin/cfg/: example_controller.cfg
cpp/controller_plugin/include/: pid.hpp
cpp/controller_plugin/src/: example_controller.cpp
cpp/controller_plugin/tmux/: session.yml
cpp/controller_plugin/tmux/config/: custom_config.yaml
cpp/pluginlib_example/: README.md
cpp/pluginlib_example/pairs_example_plugin_manager/: CMakeLists.txt  nodelets.xml  package.xml
cpp/pluginlib_example/pairs_example_plugin_manager/config/: plugins.yaml
cpp/pluginlib_example/pairs_example_plugin_manager/include/pairs_example_plugin_manager/: common_handlers.h  plugin_interface.h
cpp/pluginlib_example/pairs_example_plugin_manager/launch/: example_plugin_manager.launch
cpp/pluginlib_example/pairs_example_plugin_manager/src/: example_plugin_manager.cpp
cpp/pluginlib_example/pairs_example_plugins/: CMakeLists.txt  package.xml  plugins.xml
cpp/pluginlib_example/pairs_example_plugins/src/: example_plugin.cpp
cpp/tracker_plugin/: CMakeLists.txt  README.md  package.xml  plugins.xml
cpp/tracker_plugin/cfg/: example_tracker.cfg
cpp/tracker_plugin/src/: example_tracker.cpp
cpp/tracker_plugin/tmux/: start.sh
cpp/tracker_plugin/tmux/config/: custom_config.yaml
cpp/waypoint_flier/: CMakeLists.txt  README.md  nodelets.xml  package.xml
cpp/waypoint_flier/config/: dynparam.cfg
cpp/waypoint_flier/launch/: example_waypoint_flier.launch
cpp/waypoint_flier/src/: example_waypoint_flier.cpp  pairs_example_waypoint_flier.cpp
cpp/waypoint_flier/tmux/: session.yml  start.sh
cpp/waypoint_flier/tmux/config/: custom_config.yaml
cpp/waypoint_flier_simple/: CMakeLists.txt  README.md  nodelets.xml  package.xml
cpp/waypoint_flier_simple/launch/: waypoint_flier_simple.launch
cpp/waypoint_flier_simple/src/: waypoint_flier_simple.cpp
cpp/waypoint_flier_simple/tmux/: session.yml  start.sh
python/: README.md
python/sweeping_generator/: CMakeLists.txt  package.xml
python/sweeping_generator/launch/: sweeping_generator.launch
python/sweeping_generator/scripts/: sweeping_generator.py
python/sweeping_generator/tmux/: session.yml  start.sh
