<?xml version="1.0"?>
<package format="2">

  <name>pairs_example_controller_plugin</name>
  <version>1.0.0</version>
  <description>The pairs_example_controller_plugin package</description>

  <author email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</author>
  <maintainer email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pairs_uav_managers</depend>
  <depend>pairs_msgs</depend>
  <depend>pairs_lib</depend>

  <export>
    <pairs_uav_managers plugin="${prefix}/plugins.xml" />
  </export>

</package>
