<?xml version="1.0"?>
<package format="2">

  <name>pairs_example_waypoint_flier_simple</name>
  <version>1.0.0</version>
  <description>Example for the Simple Waypoint Flier</description>

  <maintainer email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</maintainer>
  <author email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pairs_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
