<?xml version="1.0"?>
<package format="2">

  <name>pairs_example_plugin_manager</name>
  <version>1.0.0</version>
  <description>The pairs_example_plugin_manager package</description>

  <author email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</author>
  <maintainer email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pairs_lib</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
