<?xml version="1.0"?>
<package format="2">

  <name>pairs_example_plugins</name>
  <version>1.0.0</version>
  <description>The pairs_example_plugins package</description>

  <author email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</author>
  <maintainer email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>pairs_lib</depend>
  <depend>pairs_example_plugin_manager</depend>

  <export>
    <pairs_example_plugin_manager plugin="${prefix}/plugins.xml" />
  </export>

</package>
